--- a/style.scss
+++ b/style.scss
@@ -266,7 +266,36 @@ header {
 	}
 	
 }
-
+footer{
+	padding: 0 $mobile-container;
+	#logo{
+		font-family: "Lobster", sans-serif;
+		font-size: 24px;
+	}
+	p{
+		color: #00000060;
+		padding-top: 16px;
+	}
+	ul{
+		padding: 0;
+	}
+	#footer-first{
+		border-bottom: 1px solid #00000010;
+	}
+	#copyright{
+		padding: 20px 0;
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		p{
+			color: #000000;
+			font-size: 18px;
+		}
+	}
+	#footer-links{
+		padding: 10px 0;
+	}
+}
 
 @media only screen and (min-width: 600px){
 	#category-cards .card {
@@ -348,6 +377,36 @@ header {
 	#recipe-cards{
 		.add{
 			width: calc(50% - 15px);
+		}
+	}
+	footer{
+		position: relative;
+		#footer-first, ul{
+			display: flex;
+			justify-content: space-between;
+			align-items: center;
+		}
+		ul{
+			gap: 60px;
+			li{
+				a{
+					font-weight: 500;
+				}
+			}
+		}
+		#footer-second{
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			gap: 40px;
+		}
+		#footer-links{
+			display: flex;
+			position: absolute;
+			right: 92px;
+			i{
+				margin: 0 20px;
+			}
 		}
 	}
 
